<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lorenzo.louvrefirmapp.TagInfoFragment">

    <TextView
        android:id="@+id/lb_info"
        android:text="@string/lb_tag_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/lb_info_text"
        android:text="@string/lb_tag_info_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/lb_info"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/button_scan_tag"
        android:text="@string/button_scan_tag_text"
        android:textSize="20dp"
        android:onClick="onScanTagClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
